<!--

     Copyright 2020 The ModiTect authors

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.moditect.layrry</groupId>
    <artifactId>layrry-aggregator</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>layrry-links-example</artifactId>
  <packaging>pom</packaging>
  <name>Layrry Links Example</name>
  <description>The Layrry Links Golf Course Management Application is a comprehensive example
  application show-casing Layrry's dynamic plug-in capabilities</description>

  <properties>
    <maven.compiler.release>14</maven.compiler.release>
  </properties>

  <modules>
    <module>layrry-links-logconfig</module>
    <module>layrry-links-core</module>
    <module>layrry-links-membership</module>
    <module>layrry-links-tournament</module>
    <module>layrry-links-greenkeeping</module>
    <module>layrry-links-runner</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.example.layrry.links</groupId>
        <artifactId>layrry-links-core</artifactId>
        <version>1.0.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <executions>
            <execution>
              <id>default-compile</id>
              <configuration>
                <release>${maven.compiler.release}</release>
                <compilerArgs>--enable-preview</compilerArgs>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
